--- a/haddock/src/Database.html
+++ b/haddock/src/Database.html
@@ -820,7 +820,7 @@ forall a. Show a =&gt; a -&gt; [Char]
 </span><span id="line-285"></span><span>    </span><span class="annot"><span class="annottext">[Char] -&gt; IO ()
 </span><span class="hs-identifier hs-var">putStrLn</span></span><span> </span><span class="annot"><span class="annottext">[Char]
 </span><span class="hs-string">&quot;-----------------------------------&quot;</span></span><span>
-</span><span id="line-286"></span><span>
+</span><span id="line-286"></span><span class="annot"><span class="hs-comment">-- | Funtion to fetch and print all the disruptions  </span></span><span>
 </span><span id="line-287"></span><span class="annot"><a href="Database.html#queryAllDisruptions"><span class="hs-identifier hs-type">queryAllDisruptions</span></a></span><span> </span><span class="hs-glyph">::</span><span> </span><span class="annot"><span class="hs-identifier hs-type">L8.ByteString</span></span><span> </span><span class="hs-glyph">-&gt;</span><span> </span><span class="annot"><span class="hs-identifier hs-type">IO</span></span><span> </span><span class="hs-special">[</span><span class="annot"><a href="Types.html#DisruptionDetail"><span class="hs-identifier hs-type">DisruptionDetail</span></a></span><span class="hs-special">]</span><span>
 </span><span id="line-288"></span><span id="queryAllDisruptions"><span class="annot"><span class="annottext">queryAllDisruptions :: ByteString -&gt; IO [DisruptionDetail]
 </span><a href="Database.html#queryAllDisruptions"><span class="hs-identifier hs-var hs-var">queryAllDisruptions</span></a></span></span><span> </span><span id="local-6989586621679111895"><span class="annot"><span class="annottext">ByteString
